--- a/djangoProject/templates/create_project.html
+++ b/djangoProject/templates/create_project.html
@@ -1,9 +1,15 @@
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CreateProject</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -11,41 +17,65 @@
     </script>
 </head>
 <body class="main">
-<div class="row "  >
+        <div class="row "  >
                 <nav class="navbar navbar-expand-lg navbar-light  sticky-top " >
-                        <div class="container-fluid" style="background-color:  #259d48;">
+                        <div class="container-fluid" style="background-color:  #259d48;">                    
                           <div class="collapse navbar-collapse col-sm-12" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-2 fs-5 fw-2 ms-3  ">
                               <li class="nav-item ">
                                 <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/home">Home</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/choceproject">Projects</a>
+                               <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/choceproject">Projects</a>
                               </li>
                                 <li class="nav-item "  >
-                                  <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/myprofile" >Profile</a>
-                                </li>
-                                 <li class="nav-item "  >
-                                  <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/allProjects" >view </a>
+                                   <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/myprofile" >Profile</a>
                                 </li>
                             </ul>
-                                 <h2>{{request.session.username}}</h2>
+
                               <ul class="navbar-nav ms-auto mb-2 mb-lg-2 fs-5 fw-2 ms-3  ">
                               <li class="nav-item">
                                 <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/logout">Logout</a>
                               </li>
-                              </ul>
 
+                            
       </div>
     </div>
   </nav>
   <div >
-  <h1>Home</h1>
-  <footer >
+
+</div></div>
+
+
+        <div >
+
+          <div class="form" >
+              <div class="border1" >
+                        <div class= "imginsta" >
+                            <center>
+                                <h1>Create project</h1>
+                            </center>
+                        </div>
+                        <hr>
+                        <center>
+                        <form class="input"  action=" " method="post" enctype="multipart/form-data" style="padding: 10px;">
+                        <h1 style="margin:10px">{{request.session.username}}</h1>
+                        {% csrf_token %}
+                            {{form.as_p}}
+                         <button type="submit" class="login_button" >create</button>
+                </form>
+                        </center>
+              </div >
+
+          </div>
+
+    </div>
+
+        <footer >
                 <hr>
                 <div class=" text-white text-center p-2" style="background-color:  #259d48;">
-                 Copyright  © 2022
+                 Copyright  © 2022 
                 </div>
               </footer>
-
-</html>
+      </body>
+      </html>
