--- a/djangoProject/templates/myprofile.html
+++ b/djangoProject/templates/myprofile.html
@@ -21,7 +21,33 @@
     </style>
 </head>
 <body >
-                        <div class= "imginsta">
+<div >
+ <nav class="navbar navbar-expand-lg navbar-light  sticky-top " >
+                        <div class="container-fluid" style="background-color:  #259d48;">
+                          <div class="collapse navbar-collapse col-sm-12" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-2 fs-5 fw-2 ms-3  ">
+                              <li class="nav-item ">
+                                <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/home">Home</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/choceproject">Projects</a>
+                              </li>
+                                <li class="nav-item "  >
+                                  <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/myprofile" >Profile</a>
+                                </li>
+                            </ul>
+
+                              <ul class="navbar-nav ms-auto mb-2 mb-lg-2 fs-5 fw-2 ms-3  ">
+                              <li class="nav-item">
+                                <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/logout">Logout</a>
+                              </li>
+                              </ul>
+
+      </div>
+    </div>
+  </nav>
+</div>
+ <div class= "imginsta " >
 
                                 <h1>profile</h1>
 
@@ -29,6 +55,8 @@
                                 <a href="http://127.0.0.1:8000/surdeleteprofile"><button type="button" class="btn btn-success m-2" >Delete account</button></a>
 
                                 <a href="http://127.0.0.1:8000/updateprofile"><button type="button" class="btn btn-success m-2">Update account</button></a>
+
+                                 <a href="http://127.0.0.1:8000/myProjects"><button type="button" class="btn btn-success m-2">My progect</button></a>
                             </div>
                             <center>
                             <hr style="width: 500px;">
@@ -73,6 +101,12 @@
                    <center>
                   <img src="{{request.session.profile_pic}}" width="200">
                    </center>
+ <footer >
+                <hr>
+                <div class=" text-white text-center p-2" style="background-color:  #259d48;">
+                 Copyright  © 2022
+                </div>
+              </footer>
 
 </body>
 </html>
