--- a/djangoProject/templates/myproject.html
+++ b/djangoProject/templates/myproject.html
@@ -1,9 +1,16 @@
+
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CreateProject</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -25,9 +32,6 @@
                                 <li class="nav-item "  >
                                   <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/myprofile" >Profile</a>
                                 </li>
-                                 <li class="nav-item "  >
-                                  <a class="nav-link text-light ms-3" href="http://127.0.0.1:8000/allProjects" >view </a>
-                                </li>
                             </ul>
                                  <h2>{{request.session.username}}</h2>
                               <ul class="navbar-nav ms-auto mb-2 mb-lg-2 fs-5 fw-2 ms-3  ">
@@ -39,13 +43,47 @@
       </div>
     </div>
   </nav>
-  <div >
-  <h1>Home</h1>
-  <footer >
+
+<table class="table m-5">
+  <thead>
+    <tr>
+
+
+      <th scope="col">title</th>
+      <th scope="col">details</th>
+      <th scope="col">total_target</th>
+      <th scope="col">start_date</th>
+       <th scope="col">end_date</th>
+        <th scope="col">category</th>
+        <th scope="col">image</th>
+
+    </tr>
+  </thead>
+  <tbody>
+
+    {% for project in projects%}
+    <tr>
+            <th scope="row">{{project.title}}</th>
+            <td>{{project.details}}</td>
+            <td>{{project.total_target}}</td>
+            <td>{{project.start_date}}</td>
+            <td>{{project.end_date}}</td>
+            <td>{{project.category}}</td>
+            <td><img src="{{project.project_pic_main.url}}" width="120"/></td>
+
+
+    </tr>
+ {%endfor%}
+  </tbody>
+</table>
+
+
+<div style="height: 200px;"></div>
+        <footer >
                 <hr>
                 <div class=" text-white text-center p-2" style="background-color:  #259d48;">
                  Copyright  © 2022
                 </div>
               </footer>
-
-</html>
+      </body>
+      </html>
