--- a/djangoProject/templates/myprofile.html
+++ b/djangoProject/templates/myprofile.html
@@ -75,6 +75,10 @@
                         </div>
 
                          <div class="info">
+                            <h2>donations</h2>
+                            <h2>: {{user.donations}}</h2>
+                        </div>
+                         <div class="info">
                             <h2>last name</h2>
                             <h2>: {{request.session.last_name}}</h2>
                         </div>
