--- a/djangoProject/templates/home.html
+++ b/djangoProject/templates/home.html
@@ -76,6 +76,42 @@
 </table>
 </center>
 </div>
+           <h2>the highestRate projects</h2>
+ <table class="table w-75">
+  <thead>
+    <tr>
+      <th scope="col">title</th>
+      <th scope="col">details</th>
+        <th scope="col">category</th>
+        <th scope="col">image</th>
+        <th scope="col">view</th>
+
+    </tr>
+  </thead>
+  <tbody>
+
+    {% for project in projects%}
+    <tr>
+            <th scope="row">{{project.title}}</th>
+            <td>{{project.details}}</td>
+            <td>{{project.category}}</td>
+            <td><img src="{{project.project_pic_main.url}}" width="120"/></td>
+            <td><a href=/viewProjects/{{project.title}}>view</a></td>
+
+    </tr>
+ {%endfor%}
+  </tbody>
+</table>
+     <img src="static/images/pro4.jpg"/>
+</center>
+
+</div>
+<center>
+    <h1>Categories</h1>
+    {% for Categorie in Categories%}
+    <h5> <a href="projectCategorie/{{Categorie.namecategories}}">{{Categorie.namecategories}}</a> </h5>
+    {%endfor%}
+</center>
 <center>
     <h1>Categories</h1>
     {% for Categorie in Categories%}
